--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ import org.gradle.api.tasks.testing.logging.TestLogEvent
 import java.util.concurrent.TimeUnit
 
 plugins {
-  id 'org.jetbrains.intellij' version '1.10.0-SNAPSHOT'
+  id 'org.jetbrains.intellij' version '1.10.1'
 }
 
 description = 'Manifold :: IJ'
