--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,4 @@
 version=2022.3.35
 manifoldVersion=2022.1.38-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=2022.3
