--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,7 @@ dependencies {
   implementation group: 'systems.manifold', name: 'manifold-image', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-ext', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-props', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold-delegation', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-strings', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-exceptions', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-preprocessor', version: manifoldVersion
