--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,7 @@ dependencies {
   implementation group: 'systems.manifold', name: 'manifold-ext', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-props', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-delegation', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold-typealias', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-strings', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-exceptions', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-preprocessor', version: manifoldVersion
