--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -489,6 +489,9 @@ Other minor fixes and improvements.
     <applicationService serviceInterface="com.intellij.lang.PsiBuilderFactory"
                         serviceImplementation="manifold.ij.extensions.ManPsiBuilderFactoryImpl" overrides="true"/>
 
+    <applicationService serviceInterface="com.intellij.psi.util.JavaClassSupers"
+                        serviceImplementation="manifold.ij.extensions.ManJavaClassSupersImpl" overrides="true"/>
+
     <!--<library.type implementation="manifold.ij.extensions.ManLibraryType"/>-->
 
 <!--    disabled indefinitely, inconsistent wrt downloading manifold etc.  -->
@@ -500,17 +503,21 @@ Other minor fixes and improvements.
     <java.elementFinder implementation="manifold.ij.extensions.ManTypeFinder" order="first, before java"/>
     <java.shortNamesCache implementation="manifold.ij.extensions.ManShortNamesCache"/>
     <gotoDeclarationHandler implementation="manifold.ij.extensions.ManGotoDeclarationHandler"/>
+    <superMethodsSearch implementation="manifold.ij.extensions.ManMethodSuperSearcher"/>
     <lang.psiAugmentProvider implementation="manifold.ij.extensions.ManAugmentProvider"/>
     <lang.psiAugmentProvider implementation="manifold.ij.extensions.ManPropertiesAugmentProvider"/>
     <lang.psiAugmentProvider implementation="manifold.ij.extensions.ManDelegationAugmentProvider"/>
+    <lang.psiAugmentProvider implementation="manifold.ij.extensions.TypeAliasAugmentProvider"/>
     <methodReferencesSearch implementation="manifold.ij.extensions.ExtensionMethodUsageSearcher"/>
     <lang.parserDefinition language="JAVA" implementationClass="manifold.ij.extensions.ManJavaParserDefinition" order="first"/>
     <externalAnnotator language="JAVA" implementationClass="manifold.ij.extensions.DelegationExternalAnnotator"/>
+<!--    <externalAnnotator language="JAVA" implementationClass="manifold.ij.extensions.TypeAliasExternalAnnotator"/>-->
     <externalAnnotator language="JAVA" implementationClass="manifold.ij.extensions.ManPreprocessorAnnotator" order="last"/>
     <annotator language="JAVA" implementationClass="manifold.ij.extensions.ExtensionClassAnnotator"/>
     <annotator language="JAVA" implementationClass="manifold.ij.extensions.ExtensionMethodCallSiteAnnotator"/>
     <annotator language="JAVA" implementationClass="manifold.ij.extensions.PropertiesAnnotator"/>
     <annotator language="JAVA" implementationClass="manifold.ij.extensions.DelegationAnnotator"/>
+<!--    <annotator language="JAVA" implementationClass="manifold.ij.extensions.TypeAliasClassAnnotator"/>-->
     <annotator language="JAVA" implementationClass="manifold.ij.extensions.SelfUsageAnnotator"/>
     <annotator language="JAVA" implementationClass="manifold.ij.extensions.JailbreakUsageAnnotator"/>
     <annotator language="JAVA" implementationClass="manifold.ij.extensions.MiscAnnotator"/>
