--- a/build.gradle
+++ b/build.gradle
@@ -122,12 +122,12 @@ runIde {
   minHeapSize = '1g'
   maxHeapSize = '4g'
 // uncomment to override the ide that is run
-//  ideDir = new File("C:\\Program Files\\JetBrains\\IntelliJ IDEA 2022.2")
+//  ideDir = new File("C:\\Program Files\\JetBrains\\IntelliJ IDEA Community Edition 2023.1.1")
 }
 
 patchPluginXml {
   sinceBuild = '231.0'
-  untilBuild = '231.*'
+  untilBuild = '232.*'
 }
 
 buildSearchableOptions {
