--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -215,6 +215,8 @@ String content = abc.example.UserSample.render(users);
 <h3>Change notes:</h3>
 <h4>
 <br>
+<a href="https://github.com/manifold-systems/manifold/issues/451">#451</a>: IntelliJ plugin: Invalid warning message re older manifold version in project than in intellij plugin
+<br>
 <a href="https://github.com/manifold-systems/manifold/issues/449">#449</a>: Remedy a java symbol resolve issue where a field and an inner class share the same name
 <br>
 <a href="https://github.com/manifold-systems/manifold/issues/446">#446</a>: Use MathContext.128 for big decimal division
