--- a/build.gradle
+++ b/build.gradle
@@ -92,6 +92,10 @@ dependencies {
   manifoldAll group: 'systems.manifold', name: 'manifold-all', version: manifoldVersion
   manifoldEp group: 'systems.manifold', name: 'manifold-ext-producer-sample', version: manifoldVersion
 
+  // this is for manifold-sql where use of hikari brings in slf4j
+  // if we don't add the nop here, hikari's exception logging looks like unhandled exceptions that IJ reports as manifold errors
+  //implementation 'org.slf4j:slf4j-api:2.07'
+
   implementation project('jps-plugin')
 }
 
