update change notes

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -215,6 +215,14 @@ String content = abc.example.UserSample.render(users);
 <h3>Change notes:</h3>
 <h4>
 <br>
+<a href="https://github.com/manifold-systems/manifold/issues/473">#473</a>: Change fragment delimiters
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/471">#471</a>: Change return type to be compatible with SequencedCollection#reversed
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/470">#470</a>: Support "short" runtime methods
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/468">#468</a>: Avoid adding bootstrap block to sidecar classes
+<br>
 <a href="https://github.com/manifold-systems/manifold/issues/467">#467</a>: IntelliJ plugin: support error/warning highlights in fragments (in prep for manifold-sql)
 <br>
 <a href="https://github.com/manifold-systems/manifold/issues/466">#466</a>: IntelliJ plugin: Deprecated class usage results in compilation error in IntelliJ IDEA
