master separates after IJ version 2023.2.1. IJ 2023.2.2 introduces too many breaking changes involving JavaLexer and ExpressionParser that must be integrated into ManJavaLexer and ManExpressionParser.

--- a/build.gradle
+++ b/build.gradle
@@ -130,8 +130,8 @@ runIde {
 }
 
 patchPluginXml {
-  sinceBuild = '231.0'
-  untilBuild = '232.*'
+  listProductsReleases.sinceBuild = '231.0'
+  listProductsReleases.untilVersion = '2023.2.1'
 }
 
 buildSearchableOptions {
