--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@
 #
 #
 
-version=2023.1.26
+version=2023.1.27
 manifoldVersion=2023.1.26-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=2023.2.1
