https://github.com/manifold-systems/manifold/issues/516 - create a new branch for IJ 2023.2.2 - 2023.2.* - CNFE caused by new base JavaParser base class introduced in 2023.3, where bride methods compiled into manifold's parser were the root cause due to refs to the new base class.

--- a/jps-plugin/build.gradle
+++ b/jps-plugin/build.gradle
@@ -12,7 +12,7 @@ targetCompatibility = JavaVersion.VERSION_1_8
 intellij {
 //  type = 'JPS'
   version = defaultIjVersion // e.g.,'2018.2.4'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
-  plugins = ['java'] //include PsiViewer & GraphQL JS in sandbox
+  plugins = ['com.intellij.java'] //include PsiViewer & GraphQL JS in sandbox
 }
 
 dependencies {
