https://github.com/manifold-systems/manifold/issues/525 - support changes in host API so separate SymbolProvider instances can work with different modules

--- a/build.gradle
+++ b/build.gradle
@@ -126,7 +126,7 @@ runIde {
   minHeapSize = '1g'
   maxHeapSize = '4g'
 // uncomment to override the ide that is run
-//  ideDir = new File("C:\\Program Files\\JetBrains\\IntelliJ IDEA 2023.2.2")
+  ideDir = new File("C:\\Program Files\\JetBrains\\IntelliJ IDEA 2023.2.2")
 }
 
 patchPluginXml {
