--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -215,7 +215,11 @@ String content = abc.example.UserSample.render(users);
 <h3>Change notes:</h3>
 <h4>
 <br>
-<a href="https://github.com/manifold-systems/manifold/issues/533">#533</a>: Intellij plugin: - suppress false positive errors re manifold string templates
+<a href="https://github.com/manifold-systems/manifold/issues/536">#536</a>: manifold-graphql: override java-graphql ParserOptions which are not applicable to compile-time use e.g., maxTokens
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/535">#535</a>: Intellij plugin: suppress "non-final field 'x' in enum..." issues re @val usage
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/533">#533</a>: Intellij plugin: suppress false positive errors re manifold string templates
 <br>
 <a href="https://github.com/manifold-systems/manifold/issues/532">#532</a>: Intellij plugin: string template processing is disabled in annotations due to wide usage of ${} templating in many annotation libraries
 <br>
