--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -215,6 +215,12 @@ String content = abc.example.UserSample.render(users);
 <h3>Change notes:</h3>
 <h4>
 <br>
+<a href="https://github.com/manifold-systems/manifold/issues/540">#540</a>: IntelliJ plugin: fix string template escape char error
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/537">#537</a>: Support operator overloading for binary operators (&, |, ^, <<, >>, >>>)
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/428">#428</a>: Support operator overloading for additional unary operators (!, ~)
+<br>
 <a href="https://github.com/manifold-systems/manifold/issues/538">#538</a>: Intellij plugin: do not process a psi element in a file that is not represented by a type manifold
 <br>
 <a href="https://github.com/manifold-systems/manifold/issues/535">#535</a>: Intellij plugin: filter "non-final field 'x' in enum..." on @val
