--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -215,6 +215,8 @@ String content = abc.example.UserSample.render(users);
 <h3>Change notes:</h3>
 <h4>
 <br>
+<a href="https://github.com/manifold-systems/manifold-ij/issues/22">#22</a>: account for references to inferred properties as indirect usages of getters/setters
+<br>
 <a href="https://github.com/manifold-systems/manifold/issues/564">#564</a>: support more error suppression re operator overloading with the Chinese (Simplified) Language Pack
 <br>
 <a href="https://github.com/manifold-systems/manifold/issues/562">#562</a>: manifold-sql: for nullable annotations on accessors take into account pre-commit state of columns
